# rdk-x5_smart-pet-camera

./: .env.example  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  check_frame_format.py  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  test_read_detection.py  test_with_mock.py
.cargo/: config.toml
certs/: server.crt  server.key
config/: config.example.yaml
deploy/: comic-sync.service
docs/: 01_project_goals.md  02_requirements.md  03_functional_design.md  04_architecture.md  PRIVACY_AUDIT.md  PRIVACY_CHECKLIST.md  api_hb_mem_zerocopy.md  architecture_refactor_plan.md  awb_tuning_report.md  axmodel-conversion-guide.md  bounding_box_detection_status.md  bowl-detection-insights.md  camera-and-isp.md  camera_switcher_h264_migration.md  camera_switcher_probe_fix.md  camera_switcher_probe_status.md  daily_report_2025-12-27.md  daily_report_2025-12-27_final.md  daily_report_2025-12-27_refactoring.md  daily_report_2025-12-27_v2.md  daily_report_2025-12-27_v3.md  daily_report_2025-12-28.md  daily_report_20251226.md  design_highres_roi_detection.md  design_night_roi_detection.md  design_sliding_crop_detection.md  design_zerocopy_shm.md  detection-and-yolo.md  development_roadmap.md  devlog_20251223.md  devlog_20251224.md  devlog_20251229.md  flask_go_integration_design.md  fluent_stream_switching_design.md  go_concurrency_design.md  go_poc_implementation_log.md  go_streaming_quickstart.md  go_streaming_server_design.md  gpu_capability_investigation.md  gpu_capability_report.md  (+42 more)
gpu_investigation/: README.md  benchmark_opencl.c  benchmark_opencl_map.c  collect_info.sh  n2d_alpha_blend_test  n2d_alpha_blend_test.c  query_opencl.c  system_info.txt  test2_twostep_blend.nv12
models/: README.md
scripts/: USAGE.md  benchmark_clahe_frequency.py  benchmark_median_quality.py  bowl_roi_candidates.json  bowl_rois.json  build.sh  calibrate_uv_scatter.py  check_frame_order.py  dump_night_frames.py  eval_neon.sh  install-services.sh  phase0_bpu_profiling.py  phase0_results.json  privacy_scan.py  profile_shm.py  resolve-model.sh  run_camera_switcher_dev.sh  run_camera_switcher_yolo.sh  run_camera_switcher_yolo_streaming.sh  run_yolo_benchmark.sh  sync-comics.sh  test-device.sh  test_awb_patterns.sh  test_bitrate_fine.sh  test_bitrate_limits.sh  test_bowl_stage1.py  test_bowl_stage2.py  (+9 more)
src/ai-pyramid/: CLAUDE.md  Cargo.toml  build.rs  run_album
src/ai-pyramid/docs/: IDEAS-future.md  SPEC-carousel-port.md  SPEC-esrgan-upscale.md  SPEC-refactor.md  SPEC-ui-design.md  architecture.md  detections-integration.md  level2-detection-plan.md  night-detection-experiment.md  night-yolo-evaluation.md  preact-signals-guide.md  share-link-spec.md  vlm-optimization.md
src/ai-pyramid/src/: lib.rs  main.rs
src/ai-pyramid/src/application/: commands.rs  context.rs  db_thread.rs  event.rs  mod.rs  model.rs  queries.rs  repository.rs
src/ai-pyramid/src/db/: mod.rs
src/ai-pyramid/src/detect/: local.rs  mod.rs
src/ai-pyramid/src/ingest/: filename.rs  mod.rs  watcher.rs
src/ai-pyramid/src/mcp/: mod.rs
src/ai-pyramid/src/night_assist/: clahe.rs  mod.rs
src/ai-pyramid/src/server/: mod.rs
src/ai-pyramid/src/training/: api.rs  bg.rs  db.rs  mod.rs  ssh.rs
src/ai-pyramid/src/vlm/: mod.rs
src/ai-pyramid/static/: carousel.html  carousel.js  esrgan.html  signals-test.html  websr.html
src/ai-pyramid/templates/: album.html
src/ai-pyramid/tools/: .clang-format  .clang-tidy  Makefile  VDEC_NOTES.md  ax_yolo_daemon.cpp  clahe.h  protocol.h  yolo_postprocess.h
src/ai-pyramid/ui/: build-signals-test.ts  build.ts  package.json  tsconfig.json
src/ai-pyramid/ui/dist-signals-test/: signals-test.js
src/ai-pyramid/ui/src/: app.tsx  main.tsx  signals-test.tsx  styles.css
src/ai-pyramid/ui/src/components/: backfill-button.tsx  daily-summary.tsx  event-detail.tsx  event-grid.tsx  filter-bar.tsx  pagination.tsx  search-bar.tsx  stats-strip.tsx
src/ai-pyramid/ui/src/components/training/: annotate-canvas.tsx  annotate-page.tsx
src/ai-pyramid/ui/src/lib/: api.ts  cancellable.test.ts  cancellable.ts  detail-store.ts  sse.ts  store.test.ts  store.ts  training-api.ts  upscaler.test.ts  upscaler.ts
src/ai-pyramid/ui/ui/src/lib/: api.ts
src/common/: CLAUDE.md  pyproject.toml
src/common/src/common/: types.py
src/common/src/detection/: image_utils.py  pyproject.toml  yolo_detector.py
src/monitor/: CLAUDE.md  README.md  README_WEBRTC.md  __init__.py  __main__.py  h264_recorder.py  h264_track.py  main.py  pyproject.toml  web_monitor.py  webrtc_server.py
src/monitor/web_assets/: app.js  bbox_overlay.js  index.html  monitor.css  monitor.js  protobuf_decoder.js  webrtc_client.js
(+259 files in other folders)
