[project]
name = "smart-pet-camera"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiortc>=1.9.0",
    "av>=12.0.0",
    "flask>=3.1.2",
    "hobot-dnn-rdkx5>=3.0.6",
    "monitor",
    "numpy>=1.26.0,<2.0",
    "opencv-python>=4.11.0.86",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "src/common",
    "src/common/src/detection",
    "src/mock",
    "src/monitor",
    "src/detector",
]

[tool.uv.sources]
monitor = { workspace = true }
