[project]
name = "monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask",
    "numpy>=1.26.0,<2.0",
    "opencv-python>=4.5.0",
]

[project.scripts]
smart-pet-monitor = "monitor.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["monitor"]
package-dir = {"monitor" = "."}
