[project]
name = "monitor"
version = "0.1.0"
description = "Smart Pet Camera Web Monitor with WebRTC support"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.26.0,<2.0",
    "opencv-python>=4.5.0",
    "aiortc>=1.9.0",  # WebRTC implementation
    "aiohttp>=3.9.0",  # Async HTTP server for WebRTC signaling
    "av>=12.0.0",  # PyAV for H.264 processing
]

[project.scripts]
smart-pet-monitor = "monitor.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["monitor"]
package-dir = {"monitor" = "."}
